--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app">
     <div class="test">
         <a-spinner plane></a-spinner>
+        <a-spinner bounce></a-spinner>
     </div>
 </div>
