--- a/lib/src/components/ring-bounce-spinner/ring-bounce-spinner.component.scss
+++ b/lib/src/components/ring-bounce-spinner/ring-bounce-spinner.component.scss
@@ -9,9 +9,11 @@
 
 .circle {
     animation: sk-scaleout 1s infinite ease-in-out;
+    border: .5em solid #039be5;
     border-radius: 100%;
     height: 4em;
     width: 4em;
+    box-sizing: border-box;
 }
 
 @keyframes sk-scaleout {
