--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <div class="test">
         <a-spinner plane></a-spinner>
         <a-spinner bounce></a-spinner>
+        <a-spinner ring-bounce></a-spinner>
     </div>
 </div>
