Add ring rotate spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
         <a-spinner plane></a-spinner>
         <a-spinner bounce></a-spinner>
         <a-spinner ring-bounce></a-spinner>
+        <a-spinner ring-rotate></a-spinner>
     </div>
 </div>
