Add ring bounce in spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
         <a-spinner bounce></a-spinner>
         <a-spinner ring-bounce></a-spinner>
         <a-spinner ring-rotate></a-spinner>
+        <a-spinner ring-bounce-in></a-spinner>
     </div>
 </div>
