--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
         <a-spinner ring-bounce></a-spinner>
         <a-spinner ring-rotate></a-spinner>
         <a-spinner ring-bounce-in></a-spinner>
+        <a-spinner double-bounce></a-spinner>
     </div>
 </div>
