Add bars spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
         <a-spinner ring-rotate></a-spinner>
         <a-spinner ring-bounce-in></a-spinner>
         <a-spinner double-bounce></a-spinner>
+        <a-spinner bars></a-spinner>
     </div>
 </div>
