--- a/lib/src/components/ring-rotate-spinner/ring-rotate-spinner.component.scss
+++ b/lib/src/components/ring-rotate-spinner/ring-rotate-spinner.component.scss
@@ -19,6 +19,7 @@
     position: absolute;
     top: 50%;
     width: 4em;
+    box-sizing: border-box;
 
     @for $i from 1 to 4 {
         &.state-#{$i} {
