--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
         <a-spinner ring-bounce-in></a-spinner>
         <a-spinner double-bounce></a-spinner>
         <a-spinner bars></a-spinner>
+        <a-spinner cube-move></a-spinner>
     </div>
 </div>
