Add cube grid spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
         <a-spinner double-bounce></a-spinner>
         <a-spinner bars></a-spinner>
         <a-spinner cube-move></a-spinner>
+        <a-spinner cube-grid></a-spinner>
     </div>
 </div>
