Add dot bounce spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
         <a-spinner bars></a-spinner>
         <a-spinner cube-move></a-spinner>
         <a-spinner cube-grid></a-spinner>
+        <a-spinner dot-bounce></a-spinner>
     </div>
 </div>
