--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,6 @@
         <a-spinner cube-move></a-spinner>
         <a-spinner cube-grid></a-spinner>
         <a-spinner dot-bounce></a-spinner>
+        <a-spinner dot-circle></a-spinner>
     </div>
 </div>
