--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,6 @@
         <a-spinner cube-grid></a-spinner>
         <a-spinner dot-bounce></a-spinner>
         <a-spinner dot-circle></a-spinner>
+        <a-spinner dot-circle-scale></a-spinner>
     </div>
 </div>
