Add circle ring spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,6 @@
         <a-spinner dot-bounce></a-spinner>
         <a-spinner dot-circle></a-spinner>
         <a-spinner dot-circle-scale></a-spinner>
+        <a-spinner circle-ring></a-spinner>
     </div>
 </div>
