Add double circle ring spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,6 @@
         <a-spinner dot-circle></a-spinner>
         <a-spinner dot-circle-scale></a-spinner>
         <a-spinner circle-ring></a-spinner>
+        <a-spinner double-circle-ring></a-spinner>
     </div>
 </div>
