--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,6 @@
         <a-spinner dot-circle-scale></a-spinner>
         <a-spinner circle-ring></a-spinner>
         <a-spinner double-circle-ring></a-spinner>
+        <a-spinner pair-circle-ring></a-spinner>
     </div>
 </div>
