Add dot wave spinner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,6 @@
         <a-spinner circle-ring></a-spinner>
         <a-spinner double-circle-ring></a-spinner>
         <a-spinner pair-circle-ring></a-spinner>
+        <a-spinner dot-wave></a-spinner>
     </div>
 </div>
